update swagger comments
